# VEP-eval

./: .gitignore  .gitmodules  CLAUDE.md  README.md  main.py  pyproject.toml
src/vep_eval/: analyze_conservation_buckets.py  proteingym_io.py  run_name.py  score_proteingym_alphamissense.py  score_proteingym_esm.py  score_proteingym_primateai3d.py  score_proteingym_sift.py  visualize_esm_scores.py  visualize_scores.py
