[project]
name = "vep-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "backoff>=2.2.1",
    "bio>=1.8.1",
    "biopython>=1.86",
    "bs4>=0.0.2",
    "matplotlib>=3.10.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.6.0",
    "torch>=2.10.0",
    "mygene>=3.2.2",
    "tqdm>=4.67.3",
]

[project.scripts]
vep-eval = "vep_eval.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vep_eval"]
